# InfoPoint

./: .gitignore  LICENSE  README.org  colors_blue.xml  colors_blue_alt.xml
server/: CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml  flake.nix
server/.cache/clangd/index/: client.h.CEA5BCE321693495.idx  database.c.6C2C4FDE70E4C94C.idx  database.h.CF99D73A87F3FCBA.idx  handler.c.A52B37F64D38F125.idx  handler.c.EE83A991B27B3207.idx  handler.h.81D8C9569B9E63A0.idx  handler.h.B1831CA84EB692A4.idx  main.c.CA834F34B5A063E1.idx  payload.h.4052A4512F8259FE.idx  server.c.8222DF6451FC53CA.idx  server.c.9565C301D0B68C62.idx  server.h.F634F9678D756429.idx  utils.c.FA8F18D369608BE4.idx  utils.h.706500851810FB8B.idx  welcome_message.h.447F6FC86E5D9252.idx  wrapper.c.55EACFE9EBC664A3.idx  wrapper.c.58CCC8831B0F28F5.idx  wrapper.h.5ADD8C7D0426C8C2.idx  wrapper.h.BB8F8FABF6415233.idx
server/.direnv/: flake-profile-1-link  flake-profile-2-link
server/cmake/: Colors.cmake  CompilerBuildFlags.cmake  CompilerWarnings.cmake  DatabaseSettings.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  Utils.cmake
server/src/: compile_commands.json  info_point.ini  info_point_config.json  main.c  server.c
server/src/common/logging/: logging.h
server/src/containers/: docker-compose.yml
server/src/core/database/: database.c  database.h
server/src/core/handler/: handler.c  handler.h
server/src/core/message/: message.c  message.h
server/src/core/payload/: payload.c  payload.h
server/src/core/pool/: thread_pool.c  thread_pool.h
server/src/core/server/: server.c  server.h
server/src/database/: database.c  database.h
server/src/helpers/base/: macros.h  types_definition.h
server/src/helpers/command_line_runner/: command_line_runner.c  command_line_runner.h
server/src/helpers/config/: config_parser.c  config_parser.h  info_point_config.c  info_point_config.h  main.c  sys_queue.h
server/src/helpers/container/: queue.c  queue.h
server/src/helpers/handler/: signal_handler.c  signal_handler.h
server/src/helpers/logging/: logging.c  logging.h  welcome_message.h
server/src/helpers/pool/: thread_pool.c  thread_pool.h
server/src/helpers/utility/: utility.c  utility.h
server/src/infrastructure/base/: types_definition.h
server/src/infrastructure/command_line_runner/: command_line_runner.c  command_line_runner.h
server/src/infrastructure/config/: config.c  config.h  config_parser.c  config_parser.h  (+3 more)
(+370 files in other folders)
